--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\108319004\\Anaconda3\\envs\\AUO_workspace\\python.exe"
+    "python.pythonPath": "C:\\Users\\108319004\\Anaconda3\\envs\\AUO_forecast\\python.exe"
 }
